# yt-point

./: .gitignore  README.md  biome.json  flake.nix  index.html  package.json  viewer.html  vite.config.ts  vitest.config.ts  wdio.conf.js
.github/workflows/: ci.yml  release-windows.yml  release.yml
public/: viewer.html
sidecar/: index.ts  package.json
src/: App.tsx  Viewer.tsx  index.css  main.tsx  styles.css  viewer-main.tsx  viewer.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  points.rs  points_config.toml  sidecar.rs  state.rs  web_server.rs
src/__tests__/: App.test.tsx  Viewer.test.tsx
src/components/ui/: switch.tsx
test/specs/: app.spec.js
